--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "@types/node": "^16.18.77",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "firebase": "^10.7.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
+    "styled-reset": "^4.5.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
