--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.70.0",
     "sort-by": "^1.2.0",
     "styled-reset": "^4.5.2",
     "typescript": "^4.9.5",
